unpackaged/objects/Eligibility_Calculator__c.object
<CustomObject>
    <fields>
        <fullName>ABB__c</fullName>
        <inlineHelpText>Choose lower of the 3 months and add</inlineHelpText>
        <label>ABB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Installment_Of_Proposed_Loan__c</fullName>
        <label>Annual Installment Of Proposed Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Installment_on_Existing_Loans__c</fullName>
        <inlineHelpText>(excl. takeover loan installment )</inlineHelpText>
        <label>Annual Installment on Existing Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Profit__c</fullName>
        <formula>(Annual_T_O_as_per_GST_return__c * Industry_Margin__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_T_O_as_per_GST_return__c</fullName>
        <formula>T_O_as_per_First_Quarter_GST_Return__c + T_O_as_per_Second_Quarter_GST_Return__c + T_O_as_per_Third_Quarter_GST_Return__c + T_O_as_per_Fouth_Quarter_GST_Return__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual T/O as per GST return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Eligibility Calculator</relationshipLabel>
        <relationshipName>Eligibility_Calculator</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Balance_1__c</fullName>
        <formula>(X2nd_of_Month1__c + X8th_of_Month1__c + X15th_of_Month1__c + X22nd_of_Month1__c + X27th_of_Month1__c)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Balance 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Balance_2__c</fullName>
        <formula>(X2nd_of_Month2__c + X8th_of_Month2__c + X15th_of_Month2__c + X22nd_of_Month2__c + X27th_of_Month2__c)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Balance 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Balance_3__c</fullName>
        <formula>(X2nd_of_Month3__c + X8th_of_Month3__c + X15th_of_Month3__c + X22nd_of_Month3__c + X27th_of_Month3__c)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Balance 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Sales__c</fullName>
        <inlineHelpText>As per latest 3 month kachha Bills record</inlineHelpText>
        <label>Average Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Margin__c</fullName>
        <label>Business Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSCR__c</fullName>
        <formula>Total_Operating_Income_A__c / Total_Debt_Obligation_B__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSCR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debt_Obligation__c</fullName>
        <label>Debt Obligation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depreciation__c</fullName>
        <label>Depreciation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_EMI__c</fullName>
        <formula>ABB__c /1.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible EMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOIR_Calculation_For_GST_Surrogates__c</fullName>
        <label>FOIR Calculation For GST Surrogates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOIR_GST__c</fullName>
        <formula>(Total_Monthly_EMI_Obligation__c / Mothly_Income__c )* 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOIR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOIR_LIP__c</fullName>
        <formula>Total_EMI__c / Final_Net_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOIR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOIR_NIP__c</fullName>
        <formula>(Total_EMI__c / Total_Income__c ) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOIR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Net_Income__c</fullName>
        <formula>Net_Monthly_Income__c+Depreciation__c+ Partner_Prop_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Mothly_Obligations__c</fullName>
        <label>Fixed Mothly Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Margin__c</fullName>
        <description>As per standard Industry margin list</description>
        <label>Industry Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_On_Existing_CC_OD_Loans__c</fullName>
        <label>Interest On Existing CC/OD Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Paid_on_Unsecured_loans__c</fullName>
        <inlineHelpText>Relatives &amp; Friends</inlineHelpText>
        <label>Interest Paid on Unsecured loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_paid_to_Partners__c</fullName>
        <label>Interest paid to Partners</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <formula>(Proposed_Loan_Amount_In_Lakhs__c / Property_Valuation_in_Lakhs__c ) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTV %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Current_Account__c</fullName>
        <label>Main Current Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <label>Month 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <label>Month 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_3__c</fullName>
        <label>Month 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Average__c</fullName>
        <formula>(Average_Monthly_Balance_1__c + Average_Monthly_Balance_2__c + Average_Monthly_Balance_3__c +
Average_Monthly_Balance_4__c + Average_Monthly_Balance_5__c + Average_Monthly_Balance_6__c)/6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_EMI__c</fullName>
        <label>Monthly EMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Expense__c</fullName>
        <label>Monthly Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Income__c</fullName>
        <formula>(Average_Monthly_Sales__c * Business_Margin__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_On_CC_OD_Limit__c</fullName>
        <label>Monthly Interest On CC/OD Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mothly_Income__c</fullName>
        <formula>Annual_Profit__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mothly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NIP_Monthly_Income__c</fullName>
        <formula>Monthly_Gross_Income__c - Monthly_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIP Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Annual_Income_lower_of_both__c</fullName>
        <formula>MIN(X4_5_Time_of_Net_profit_as_per_ITR__c,X90_of_Net_profit_as_per_LIP_report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Annual Income lower of both</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Income_as_per_ITR__c</fullName>
        <inlineHelpText>As per provide document Latest ITR</inlineHelpText>
        <label>Net Income as per ITR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Income__c</fullName>
        <formula>Net_Income_as_per_ITR__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Profit_As_Per_LIP_Report__c</fullName>
        <label>Net Profit As Per LIP Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Income__c</fullName>
        <label>Operating Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Monthly_Income__c</fullName>
        <label>Other Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAT__c</fullName>
        <label>PAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Prop_Income__c</fullName>
        <label>Partner/ Prop. Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Valuation_in_Lakhs__c</fullName>
        <label>Property Valuation in Lakhs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Loan_Amount_In_Lakhs__c</fullName>
        <label>Proposed Loan Amount (In Lakhs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI  (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_of_Interest__c</fullName>
        <label>Rate of Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remuneration_Salary_Paid__c</fullName>
        <inlineHelpText>To Partner/Director</inlineHelpText>
        <label>Remuneration/Salary Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Income__c</fullName>
        <inlineHelpText>In case of direct bank deposit of rent consider 100% for calculation purposes. In case rent is received in cash then 50% of rent received for calculation purposes</inlineHelpText>
        <label>Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_EMI__c</fullName>
        <label>Running EMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_O_as_per_First_Quarter_GST_Return__c</fullName>
        <label>T/O as per First Quarter GST Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_O_as_per_Fouth_Quarter_GST_Return__c</fullName>
        <label>T/O as per Fouth Quarter GST Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_O_as_per_Second_Quarter_GST_Return__c</fullName>
        <label>T/O as per Second Quarter GST Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_O_as_per_Third_Quarter_GST_Return__c</fullName>
        <label>T/O as per Third Quarter GST Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenure_In_Months__c</fullName>
        <label>Tenure In Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Debt_Obligation_B__c</fullName>
        <formula>Interest_On_Existing_CC_OD_Loans__c + Annual_Installment_on_Existing_Loans__c + Annual_Installment_Of_Proposed_Loan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Debt Obligation (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_EMI__c</fullName>
        <formula>Monthly_EMI__c + Running_EMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total EMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <formula>NIP_Monthly_Income__c + Rental_Income__c +  Other_Monthly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Interest_on_existing_facility__c</fullName>
        <label>Total Interest on existing facility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_EMI_Obligation__c</fullName>
        <label>Total Monthly EMI Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Operating_Income_A__c</fullName>
        <formula>PAT__c + Depreciation__c + Total_Interest_on_existing_facility__c + Interest_Paid_on_Unsecured_loans__c + Interest_paid_to_Partners__c + Remuneration_Salary_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Operating Income (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X15th_of_Month1__c</fullName>
        <label>15th of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X15th_of_Month2__c</fullName>
        <label>15th of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X15th_of_Month3__c</fullName>
        <label>15th of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X22nd_of_Month1__c</fullName>
        <label>22nd of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X22nd_of_Month2__c</fullName>
        <label>22nd of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X22nd_of_Month3__c</fullName>
        <label>22nd of Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4_5_Time_of_Net_profit_as_per_ITR__c</fullName>
        <formula>4.5 *  Net_Income_as_per_ITR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.5 Time of Net profit as per ITR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X90_of_Net_profit_as_per_LIP_report__c</fullName>
        <formula>0.9 *  Net_Profit_As_Per_LIP_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90% of Net profit as per LIP report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Eligibility Calculator</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Eligibility Calculator #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Calculator</pluralLabel>
    <recordTypes>
        <fullName>ABB_Program</fullName>
        <active>true</active>
        <label>ABB Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSCR_Based</fullName>
        <active>true</active>
        <label>DSCR Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>GST_Program</fullName>
        <active>true</active>
        <label>GST Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>LIP_Program</fullName>
        <active>true</active>
        <label>LIP Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>NIP_Program</fullName>
        <active>true</active>
        <label>NIP Program</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>